src/objects/Folder__c.object
<CustomObject>
    <description>Contains all the inbox and subfolders from TES Outlook.</description>
    <fields>
        <fullName>Allocation_Group__c</fullName>
        <description>this field will tell us what group of users bookings in this folder should be allocated to</description>
        <label>Allocation Group</label>
        <picklist>
            <picklistValues>
                <fullName>AGENCY</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>List_View_URL__c</fullName>
        <label>List View URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailbox</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipLabel>Sub Folders</relationshipLabel>
        <relationshipName>SubFolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Folder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Folder__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Email__c</columns>
        <columns>Allocation_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <recordTypes>
        <fullName>Folder</fullName>
        <active>true</active>
        <description>Sub folders in a mailbox.</description>
        <label>Folder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mailbox</fullName>
        <active>true</active>
        <description>Mailbox folder that receives all emails.</description>
        <label>Mailbox</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>